[package]
name = "nix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
hex = "0.4.3"
rand = "0.8.5"
ring = "0.16.20"
sha2 = "0.10.6"
[dependencies.mongodb]
version = "2.3.1"
default-features=false
features = ["sync"]





